[package]
name = "image_tagging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"]}
webbrowser = "0"
tera = { version = "1", default-features = false }
# include_dir = "0"
lazy_static = "1.4.0"