[package]
name = "image_tagging"
version = "0.1.2"
authors = ["Yuki Suzuki <y-suzuki@radiol.med.osaka-u.ac.jp>"]
edition = "2021"
repository = "https://github.com/ykszk/itt-rs"
description = """
Simple image tagging tool with web interface.
Ported to rust from original image_tagging_tool (https://github.com/ykszk/image_tagging_tool) implemented in python.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
rocket = "0.5.0-rc.2"
webbrowser = "0"
tera = { version = "1", default-features = false }
lazy_static = "1.4.0"
regex = "1"
rusqlite = { version = "0", features = ["bundled"] }
labelme-rs = { git = "https://github.com/ykszk/labelme-rs" }